--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,11 @@
 
 <%= javascript_pack_tag 'hello_react' %>
 
-<div id="app"></div>
+<!-- <div id="app"></div> -->
+
+<%= link_to 'Destroy all orders', destroy_all_order_path, remote: true %>
+<%= link_to 'Create some orders', create_sample_orders_path, remote: true %>
+<%= link_to 'Import Orders', import_orders_path, remote: true  %>
 
 <ul>
   <% @products.each do |product| %>
@@ -10,6 +14,16 @@
   <% end %>
 </ul>
 
+<ul>
+  <% @customers.each do |customer| %>
+    <li><%= link_to customer.first_name, "https://#{@shop_session.domain}/admin/customer/#{customer.id}", target: "_top" %></li>
+  <% end %>
+</ul>
+<ul>
+  <% @orders.each do |order| %>
+    <li><%= link_to order.name, "https://#{@shop_session.domain}/admin/order/#{order.id}", target: "_top" %></li>
+  <% end %>
+</ul>
 <hr>
 
 <h2>Webhooks</h2>
