--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,86 +2,13 @@
   @import "config/fonts";
   @import "config/colors";
   @import "config/bootstrap_variables";
+  @import "config/general";
 
   // External libraries
-  // @import bootstrap/scss/bootstrap;
+  @import "bootstrap";
   @import "font-awesome-sprockets";
   @import "font-awesome";
 
   // Your RUBY partials
   @import "components/index";
   @import "pages/index";
-
-.btn {
-  padding: 5px;
-  margin: 10px;
-  background-color: white;
-  border: solid 2px black;
-  border-radius: 5px;
-
-  a {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-  }
-}
-
-.btn:hover {
-  background-color: black;
-  border: solid 2px black;
-  border-radius: 5px;
-
-  a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-  }
-}
-
-.contents {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.content {
-  height: 300px;
-  overflow: scroll;
-  margin-bottom: 30px;
-  border: solid 2px black;
-  border-radius: 5px;
-  padding: 30px;
-  background-color: white;
-
-  a {
-    color: black;
-    text-decoration: none;
-  }
-}
-
-.content {
-  a:hover {
-    text-decoration: underline;
-  }
-}
-
-.actions {
-  display:flex;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.container {
-  margin: auto;
-  width: 1200px;
-}
-
-h1 {
-  font-weight: bolder !important;
-}
-
-#page-title {
-  text-align:center
-}
