--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,8 +37,7 @@
       Create some orders
     </button>
 
-    <% if @shop_session.domain == 'lespetitsbidons.myshopify.com
-' %>
+    <% if @shop_session.domain ==  "lespetitsbidons.myshopify.com" %>
       <%= link_to 'Import Orders LPB', import_orders_path, remote: true, class: 'btn btn-lg btn-primary '  %>
       <%= link_to 'Import customers LPB', import_customers_path, remote: true, class: 'btn btn-lg btn-primary '  %>
     <% end %>
