--- a/app/views/error_mailer/welcome_email.html.erb
+++ b/app/views/error_mailer/welcome_email.html.erb
@@ -5,8 +5,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-
-    hoho
+    Le Client <%= @customer.first_name  %> <%= @customer.last_name %> n'a pas été tranféré.
+    Le message d'erreur indique <%= @errors %>
 
  </body>
 </html>
