--- a/app/views/error_mailer/welcome_email.txt.erb
+++ b/app/views/error_mailer/welcome_email.txt.erb
@@ -1,1 +1,2 @@
-hoho
+    Le Client <%= @customer.first_name  %> <%= @customer.last_name %> n'a pas été tranféré.
+    Le message d'erreur indique <%= @errors %>
